feat: switch from ssr to ssg and add new favicon

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -17,11 +17,11 @@
                 <p class="text-gray-600 xl:text-base text-sm">de excelência em aplicação de películas em residências e comércios</p>
             </div>
             <div class="flex-1 fade-in delay-2">
-                <h2 class="font-medium xl:text-5xl text-3xl mb-2 text-nowrap">2.500+</h2>
+                <h2 class="font-medium xl:text-5xl text-3xl mb-2 text-nowrap">1.500+</h2>
                 <p class="text-gray-600 xl:text-base text-sm">janelas transformadas com películas de alta performance</p>
             </div>
             <div class="flex-1 fade-in delay-3">
-                <h2 class="font-medium xl:text-5xl text-3xl mb-2 text-nowrap">15 tipos</h2>
+                <h2 class="font-medium xl:text-5xl text-3xl mb-2 text-nowrap">20+ tipos</h2>
                 <p class="text-gray-600 xl:text-base text-sm">de películas para garantir proteção solar, privacidade, segurança e estética.</p>
             </div>
         </div>
@@ -32,8 +32,8 @@
     <h3 class="text-4xl flex-1" InterObs obsClass="fade-in"><span class="text-black font-medium">
         Priorizamos qualidade,</span> garantindo a confiança dos nossos clientes em cada serviço.
     </h3>
-    <p class="flex-1 delay-1" InterObs obsClass="fade-in" rootMargin="-140px">Oferecemos películas residenciais que garantem proteção solar, aumentam a privacidade e 
-        reduzem o consumo de energia. Nossas soluções melhoram o conforto térmico e protegem sua casa
+    <p class="flex-1 delay-1" InterObs obsClass="fade-in" rootMargin="-140px">Oferecemos películas residenciais e comerciais que garantem proteção solar, aumentam a privacidade e 
+        reduzem o consumo de energia. Nossas soluções melhoram o conforto térmico e protegem seu espaço
          dos danos UV. A escolha ideal para quem busca mais qualidade de vida e economia.
     </p>
 </section>
