feat: add metadata tags to html
-Switch 60fps videos for 30fps
-Add metadata tags
-Change header img

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="img-container relative max-h-screen rounded-b-[0em] overflow-hidden">
-    <img src="./images/windows.jpg" alt="Janela de prédio com vista para a cidade"
-    class="absolute building h-full w-full object-cover brightness-90" (load)="preloadVideos()">
+    <img src="./images/windows3.jpg" alt="Janela de prédio com vista para a cidade"
+    class="absolute building h-full w-full object-cover brightness-[85%] hue-rotate-[-12deg] grayscale-[40%]" (load)="preloadVideos()">
 
     <main id="home" class="c-container z-10 h-full grid grid-cols-1 lg:grid-cols-2 gap-6">
         <header class="relative text-white self-center flex flex-col items-center text-center -mt-28 md:mt-0 md:text-start md:items-start fade-in">
