--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -14,22 +14,22 @@
         rounded-tl-3xl flex items-start gap-6">
             <div class="flex-1 fade-in delay-1">
                 <h2 class="font-medium xl:text-5xl text-3xl mb-2 text-nowrap">7 anos</h2>
-                <p class="text-gray-600 xl:text-base text-sm">de excelência em aplicação de películas em residências e comércios</p>
+                <p class="text-stone-600 xl:text-base text-sm">de excelência em aplicação de películas em residências e comércios</p>
             </div>
             <div class="flex-1 fade-in delay-2">
                 <h2 class="font-medium xl:text-5xl text-3xl mb-2 text-nowrap">1.500+</h2>
-                <p class="text-gray-600 xl:text-base text-sm">janelas transformadas com películas de alta performance</p>
+                <p class="text-stone-600 xl:text-base text-sm">janelas transformadas com películas de alta performance</p>
             </div>
             <div class="flex-1 fade-in delay-3">
                 <h2 class="font-medium xl:text-5xl text-3xl mb-2 text-nowrap">20+ tipos</h2>
-                <p class="text-gray-600 xl:text-base text-sm">de películas para garantir proteção solar, privacidade, segurança e estética.</p>
+                <p class="text-stone-600 xl:text-base text-sm">de películas para garantir proteção solar, privacidade, segurança e estética.</p>
             </div>
         </div>
     </main>
 </div>
 
-<section class="c-container py-32 flex gap-12 items-center text-gray-600">
-    <h3 class="text-4xl flex-1" InterObs obsClass="fade-in"><span class="text-black font-medium">
+<section class="c-container py-32 flex gap-12 items-center text-stone-600">
+    <h3 class="text-4xl flex-1" InterObs obsClass="fade-in"><span class="text-stone-900 font-medium">
         Priorizamos qualidade,</span> garantindo a confiança dos nossos clientes em cada serviço.
     </h3>
     <p class="flex-1 delay-1" InterObs obsClass="fade-in" rootMargin="-140px">Oferecemos películas residenciais e comerciais que garantem proteção solar, aumentam a privacidade e 
@@ -38,18 +38,18 @@
     </p>
 </section>
 
-<section id="beneficios" class="bg-gray-100 overflow-hidden">
+<section id="beneficios" class="bg-stone-100 overflow-hidden">
     <div class="c-container py-32">
-        <h1 class="font-normal text-4xl max-w-2xl text-center mx-auto text-gray-600 mb-16" InterObs obsClass="fade-in">
-            <span class="text-black">Oferecemos modernidade,</span> com produtos e serviços de excelência</h1>
+        <h1 class="font-normal text-4xl max-w-2xl text-center mx-auto text-stone-600 mb-16" InterObs obsClass="fade-in">
+            <span class="text-stone-900">Oferecemos modernidade,</span> com produtos e serviços de excelência</h1>
         <app-cards-section/>
     </div>
 </section>
 
 <section id="servicos" class="overflow-hidden">
     <div class="c-container py-32">
-        <h1 class="font-normal text-4xl max-w-2xl text-center mx-auto text-gray-600 mb-16" InterObs obsClass="fade-in">
-            Explore nossos projetos e veja como unimos <span class="text-black">funcionalidade e design em cada aplicação</span>
+        <h1 class="font-normal text-4xl max-w-2xl text-center mx-auto text-stone-600 mb-16" InterObs obsClass="fade-in">
+            Explore nossos projetos e veja como unimos <span class="text-stone-900">funcionalidade e design em cada aplicação</span>
         </h1>
         <app-video-card/>
     </div>
