--- a/src/app/components/layout/navbar/navbar.component.html
+++ b/src/app/components/layout/navbar/navbar.component.html
@@ -2,7 +2,7 @@
 transition-all border-b"
 [ngClass]="{
     'bg-black bg-opacity-20 border-gray-300 border-b': isScrolled && !isScrolledLimit,
-    'text-black bg-white backdrop-blur-sm bg-opacity-40 border-b border-gray-300': isScrolledLimit,
+    'text-stone-950 bg-white backdrop-blur-sm bg-opacity-40 border-b border-gray-300': isScrolledLimit,
     'text-white border-transparent': !isScrolledLimit,
     }">
     <div>
