--- a/src/app/components/layout/video-card/video-card.component.html
+++ b/src/app/components/layout/video-card/video-card.component.html
@@ -1,4 +1,4 @@
-<div class="bg-gray-100 rounded-3xl relative overflow-hidden" InterObs obsClass="fade-in" [intersectChild]="true">
+<div class="bg-stone-100 rounded-3xl relative overflow-hidden" InterObs obsClass="fade-in" [intersectChild]="true">
 
     @for (card of videoCards; track card.id) { 
         @if(card.id === selectedVideoCard) {
@@ -6,7 +6,7 @@
                 <div class="flex flex-col flex-grow justify-between gap-10 p-10">
                     <div [@fadeSlide]="'up'">
                         <h2 class="text-2xl font-bold mb-2 md:mb-4">{{card.title}}</h2>
-                        <p class="text-gray-600 text-lg mb-6">{{card.description}}</p>
+                        <p class="text-stone-600 text-lg mb-6">{{card.description}}</p>
                         <a class="bg-primary text-white py-2 px-6 text-lg font-medium rounded-full
                         hover:brightness-105 active:brightness-110 transition"
                         href="https://wa.me/+5579996121414?text=Ol%C3%A1,%20desejo%20solicitar%20um%20or%C3%A7amento!"
@@ -16,7 +16,7 @@
                         @for (card of videoCards; track card.id) {
                             <button class="flex flex-grow flex-col-reverse gap-1 justify-center cursor-pointer group"
                             (click)="setVideoCard(card.id)" [attr.aria-label]="'Mudar para vídeo ' + card.title">
-                                <div class="w-full h-[5px] bg-gray-300 rounded-full">
+                                <div class="w-full h-[5px] bg-stone-300 rounded-full">
                                     <div class="h-[5px] rounded-full bg-primary transition-all ease-linear" [style.width.%]="card.progress"></div>
                                 </div>
                             </button>
