feat: improve acessibility, files and meta tags
- (cards-section): change h4 to h2
- change images format to .webp
- fix flaticon cdn preventing the page to load faster

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="img-container relative max-h-screen rounded-b-[0em] overflow-hidden">
-    <img src="./images/windows3.jpg" alt="Janela de prédio com vista para a cidade"
+    <img src="./images/windows3.webp" alt="Janela de prédio com vista para a cidade"
     class="absolute building h-full w-full object-cover brightness-[85%] hue-rotate-[-12deg] grayscale-[40%]" (load)="preloadVideos()">
 
     <main id="home" class="c-container z-10 h-full grid grid-cols-1 lg:grid-cols-2 gap-6">
@@ -29,9 +29,9 @@
 </div>
 
 <section class="c-container py-32 flex gap-12 items-center text-stone-600">
-    <h3 class="text-4xl flex-1" InterObs obsClass="fade-in"><span class="text-stone-900 font-medium">
+    <h1 class="text-4xl flex-1" InterObs obsClass="fade-in"><span class="text-stone-900 font-medium">
         Priorizamos qualidade,</span> garantindo a confiança dos nossos clientes em cada serviço.
-    </h3>
+    </h1>
     <p class="flex-1 delay-1" InterObs obsClass="fade-in" rootMargin="-140px">Oferecemos películas residenciais e comerciais que garantem proteção solar, aumentam a privacidade e 
         reduzem o consumo de energia. Nossas soluções melhoram o conforto térmico e protegem seu espaço
          dos danos UV. A escolha ideal para quem busca mais qualidade de vida e economia.
