--- a/src/app/components/layout/cards-section/cards-section.component.html
+++ b/src/app/components/layout/cards-section/cards-section.component.html
@@ -1,4 +1,5 @@
-<div class="grid grid-cols-[repeat(auto-fit,_minmax(300px,_1fr))] m-px rounded-3xl border border-stone-200 overflow-clip gap-px
+<div class="grid md:grid-cols-[repeat(auto-fit,_minmax(300px,_1fr))]
+grid-cols-[repeat(auto-fit,_minmax(250px,_1fr))] m-px rounded-3xl border border-stone-200 overflow-clip gap-px
 bg-stone-200" InterObs obsClass="fade-in" [intersectChild]="true">
 
     @for(card of cards; track $index) {
