--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,9 +9,9 @@
             hover:opacity-90 active:opacity-85 transition-opacity"
             href="https://wa.me/+5579996121414?text=Ol%C3%A1,%20desejo%20solicitar%20um%20or%C3%A7amento!" target="_blank">Fazer orçamento</a>
         </header>
-        <div class="main-card-info bg-white self-end absolute translate-x-1/2 right-1/2 md:translate-x-0 md:right-0 
+        <div class="main-card-info bg-white bottom-0 absolute translate-x-1/2 right-1/2 md:translate-x-0 md:right-0 
         w-[calc(100%-40px)] sm:w-[calc(100%-80px)] md:max-w-[50%] xl:p-8 p-6 pb-0 md:rounded-tr-none rounded-tr-3xl 
-        rounded-tl-3xl flex items-start gap-6">
+        rounded-tl-3xl flex items-start gap-6 max-h-[145px] sm:max-h-none">
             <div class="flex-1 fade-in delay-1">
                 <h2 class="font-medium xl:text-5xl text-3xl mb-2 text-nowrap">7 anos</h2>
                 <p class="text-stone-600 xl:text-base text-sm">de excelência em aplicação de películas em residências e comércios</p>
@@ -32,7 +32,7 @@
     <h1 class="text-4xl flex-1" InterObs obsClass="fade-in"><span class="text-stone-900 font-medium">
         Priorizamos qualidade,</span> garantindo a confiança dos nossos clientes em cada serviço.
     </h1>
-    <p class="flex-1 delay-1" InterObs obsClass="fade-in" rootMargin="-140px">Oferecemos películas residenciais e comerciais que garantem proteção solar, aumentam a privacidade e 
+    <p class="break-all xs:break-normal flex-1 delay-1" InterObs obsClass="fade-in" rootMargin="-140px">Oferecemos películas residenciais e comerciais que garantem proteção solar, aumentam a privacidade e 
         reduzem o consumo de energia. Nossas soluções melhoram o conforto térmico e protegem seu espaço
          dos danos UV. A escolha ideal para quem busca mais qualidade de vida e economia.
     </p>
