fix(video-card): resolve autoplay and prevent auto-fullscreen on IOS safari

--- a/src/app/components/layout/video-card/video-card.component.html
+++ b/src/app/components/layout/video-card/video-card.component.html
@@ -25,9 +25,10 @@
                 </div>
                 <div class="relative h-full flex-shrink-0 p-3" [@fadeSlide]="'noslide'">
                     <video #videoRef class="max-h-full aspect-[1.4/1] mx-auto w-[min(600px,100%)] 
-                    sm:aspect-auto h-auto sm:h-full sm:w-60 md:w-80 object-cover rounded-2xl skeleton" [muted]="true" autoplay
+                    sm:aspect-auto h-auto sm:h-full sm:w-60 md:w-80 object-cover rounded-2xl skeleton"
                     (timeupdate)="updateProgress(videoRef)" (click)="togglePause(videoRef)" (ended)="onVideoEnd()"
-                    [src]="card.videoUrl" type="video/mp4" (canplaythrough)="onLoadedVideo($event)">
+                    [src]="card.videoUrl" type="video/mp4" (canplaythrough)="onLoadedVideo($event)"
+                    [muted]="true" [autoplay]="true" [playsInline]="true">
                     </video>
                     <a href="https://www.instagram.com/ajufilms/" target="_blank" class="absolute right-1/2 
                     translate-x-1/2 bottom-8 bg-black px-4 py-2 bg-opacity-40 
