--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,7 +9,7 @@
             hover:opacity-90 active:opacity-85 transition-opacity"
             href="https://wa.me/+5579996121414?text=Ol%C3%A1,%20desejo%20solicitar%20um%20or%C3%A7amento!" target="_blank">Fazer orçamento</a>
         </header>
-        <div class="main-card-info bg-white bottom-0 absolute translate-x-1/2 right-1/2 md:translate-x-0 md:right-0 
+        <div class="main-card-info bg-white -bottom-[1px] absolute translate-x-1/2 right-1/2 md:translate-x-0 md:right-0 
         w-[calc(100%-40px)] sm:w-[calc(100%-80px)] md:max-w-[50%] xl:p-8 p-6 pb-0 md:rounded-tr-none rounded-tr-3xl 
         rounded-tl-3xl flex items-start gap-6 max-h-[145px] sm:max-h-none">
             <div class="flex-1 fade-in delay-1">
