--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -15,16 +15,16 @@
         w-[calc(100%-40px)] sm:w-[calc(100%-80px)] md:max-w-[50%] xl:p-8 p-6 pb-0 md:rounded-tr-none rounded-tr-3xl 
         rounded-tl-3xl flex items-start gap-6 max-h-[145px] sm:max-h-none">
             <div class="flex-1 fade-in delay-1">
-                <h2 class="font-medium xl:text-5xl text-3xl mb-2">7 anos</h2>
-                <p class="text-stone-600 xl:text-base text-sm">de excelência em aplicação de películas em residências e comércios</p>
+                <h2 class="font-medium xl:text-5xl xs:text-3xl text-2xl mb-2">7 anos</h2>
+                <p class="text-stone-600 xl:text-base text-sm break-all sm:break-normal">de excelência em aplicação de películas em residências e comércios</p>
             </div>
             <div class="flex-1 fade-in delay-2">
-                <h2 class="font-medium xl:text-5xl text-3xl mb-2">1.500+</h2>
-                <p class="text-stone-600 xl:text-base text-sm">janelas transformadas com películas de alta performance</p>
+                <h2 class="font-medium xl:text-5xl xs:text-3xl text-2xl mb-2">1.500+</h2>
+                <p class="text-stone-600 xl:text-base text-sm break-all sm:break-normal">janelas transformadas com películas de alta performance</p>
             </div>
             <div class="flex-1 fade-in delay-3">
-                <h2 class="font-medium xl:text-5xl text-3xl mb-2">20+ tipos</h2>
-                <p class="text-stone-600 xl:text-base text-sm">de películas para garantir proteção solar, privacidade, segurança e estética.</p>
+                <h2 class="font-medium xl:text-5xl xs:text-3xl text-2xl mb-2">20+ tipos</h2>
+                <p class="text-stone-600 xl:text-base text-sm break-all sm:break-normal">de películas para garantir proteção solar, privacidade, segurança e estética.</p>
             </div>
         </div>
     </main>
