--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -30,11 +30,11 @@
     </main>
 </div>
 
-<section class="c-container py-32 flex gap-12 items-center text-stone-600">
-    <h1 class="text-4xl flex-1" InterObs obsClass="fade-in"><span class="text-stone-900 font-medium">
+<section class="c-container py-32 flex sm:flex-row flex-col sm:gap-12 gap-4 items-center text-stone-600">
+    <h1 class="text-4xl flex-1 sm:text-start text-center" InterObs obsClass="fade-in"><span class="text-stone-900 font-medium">
         Priorizamos qualidade,</span> garantindo a confiança dos nossos clientes em cada serviço.
     </h1>
-    <p class="break-all xs:break-normal flex-1 delay-1" InterObs obsClass="fade-in" rootMargin="-140px">Oferecemos películas residenciais e comerciais que garantem proteção solar, aumentam a privacidade e 
+    <p class="flex-1 delay-1 sm:block hidden" InterObs obsClass="fade-in" rootMargin="-140px">Oferecemos películas residenciais e comerciais que garantem proteção solar, aumentam a privacidade e 
         reduzem o consumo de energia. Nossas soluções melhoram o conforto térmico e protegem seu espaço
          dos danos UV. A escolha ideal para quem busca mais qualidade de vida e economia.
     </p>
@@ -42,7 +42,7 @@
 
 <section id="beneficios" class="bg-stone-100 overflow-hidden">
     <div class="c-container py-32">
-        <h1 class="font-normal text-4xl max-w-2xl text-center mx-auto text-stone-600 mb-16" InterObs obsClass="fade-in">
+        <h1 class="font-normal text-4xl max-w-2xl sm:text-center text-start mx-auto text-stone-600 mb-16" InterObs obsClass="fade-in">
             <span class="text-stone-900">Oferecemos modernidade,</span> com produtos e serviços de excelência</h1>
         <app-cards-section/>
     </div>
