feat: add header text rotation on mobile screen

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,26 +6,45 @@
 
     <main id="home" class="c-container h-full grid grid-cols-1 lg:grid-cols-2 gap-6">
         <header class="relative text-white self-center flex flex-col items-center text-center -mt-28 md:mt-0 md:text-start md:items-start fade-in">
-            <h1 class="text-[3.5rem] xs:text-[4.2rem] font-medium leading-tight max-w-2xl">A proteção que seu ambiente precisa!</h1>
+            <h1 class="text-[2.8rem] xs:text-[4.1rem] min-[375px]:text-[3.6rem] font-medium leading-tight max-w-2xl">A proteção que seu ambiente precisa!</h1>
             <a class="bg-stone-50 text-stone-950 py-2 px-6 rounded-full text-lg font-semibold mt-4
             hover:opacity-90 active:opacity-85 transition-opacity"
             href="https://wa.me/+5579996121414?text=Ol%C3%A1,%20desejo%20solicitar%20um%20or%C3%A7amento!" target="_blank">Fazer orçamento</a>
         </header>
         <div class="main-card-info bg-white -bottom-[1px] absolute translate-x-1/2 right-1/2 md:translate-x-0 md:right-0 
-        w-[calc(100%-40px)] sm:w-[calc(100%-80px)] md:max-w-[50%] xl:p-8 p-6 pb-0 md:rounded-tr-none rounded-tr-3xl 
-        rounded-tl-3xl flex items-start gap-6 max-h-[145px] sm:max-h-none">
-            <div class="flex-1 fade-in delay-1">
-                <h2 class="font-medium xl:text-5xl xs:text-3xl text-2xl mb-2">7 anos</h2>
-                <p class="text-stone-600 xl:text-base text-sm break-all sm:break-normal">de excelência em aplicação de películas em residências e comércios</p>
+        w-[calc(100%-60px)] sm:w-[calc(100%-80px)] md:max-w-[60%] lg:max-w-[50%] xl:p-8 p-6 pb-0 md:rounded-tr-none rounded-tr-3xl 
+        rounded-tl-3xl flex sm:flex-row flex-col sm:items-start items-center sm:gap-6 gap-2 h-[140px] sm:h-[auto] sm:max-h-none">
+            <div class="flex-1 fade-in delay-1 sm:block hidden">
+                <h2 class="font-medium 2xl:text-5xl xl:text-4xl xs:text-3xl text-2xl mb-2">7 anos</h2>
+                <p class="text-stone-600 xl:text-base text-sm">de excelência em aplicação de películas em residências e comércios</p>
             </div>
-            <div class="flex-1 fade-in delay-2">
-                <h2 class="font-medium xl:text-5xl xs:text-3xl text-2xl mb-2">1.500+</h2>
-                <p class="text-stone-600 xl:text-base text-sm break-all sm:break-normal">janelas transformadas com películas de alta performance</p>
+            <div class="flex-1 fade-in delay-2 sm:block hidden">
+                <h2 class="font-medium 2xl:text-5xl xl:text-4xl xs:text-3xl text-2xl mb-2">1.500+</h2>
+                <p class="text-stone-600 xl:text-base text-sm">janelas transformadas com películas de alta performance</p>
             </div>
-            <div class="flex-1 fade-in delay-3">
-                <h2 class="font-medium xl:text-5xl xs:text-3xl text-2xl mb-2">20+ tipos</h2>
-                <p class="text-stone-600 xl:text-base text-sm break-all sm:break-normal">de películas para garantir proteção solar, privacidade, segurança e estética.</p>
+            <div class="flex-1 fade-in delay-3 sm:block hidden">
+                <h2 class="font-medium 2xl:text-5xl xl:text-4xl xs:text-3xl text-2xl mb-2">20+ tipos</h2>
+                <p class="text-stone-600 xl:text-base text-sm">de películas para garantir proteção solar, privacidade, segurança e estética.</p>
             </div>
+            
+            <!-- 640px less -->
+            @let selectedText = headerTexts[selectedHeaderTextIndex()];
+            <div class="flex-1 fade-in delay-1 text-center sm:hidden" [@fadeTrigger]="selectedHeaderTextIndex()">
+                <h2 class="xs:text-5xl text-4xl xs:font-normal font-medium mb-2">{{ selectedText.largeText }}</h2>
+                <p class="text-stone-600">{{ selectedText.smallText }}</p>
+            </div>
+            <!-- items-bar -->
+            <div class="flex items-center justify-center sm:hidden">
+                @for (item of headerTexts; track $index) {
+                    <button class="hover:opacity-100 transition-opacity p-2"
+                    [ngClass]="$index === selectedHeaderTextIndex() ? 'opacity-100' : 'opacity-30'"
+                    (click)="setHeaderText($index)">
+                    <div class="w-2.5 h-2.5 bg-stone-600 rounded-full"></div>
+                    </button>
+                }
+            </div>
+            <!-- 640px less -->
+
         </div>
     </main>
 </div>
