--- a/src/app/components/layout/footer/footer.component.html
+++ b/src/app/components/layout/footer/footer.component.html
@@ -18,9 +18,9 @@
                 </a>
             </div>
         </div>
-        <div class="py-6 flex items-center justify-between font-light gap-6">
+        <div class="py-6 flex xs:flex-row xs:items-start items-center flex-col justify-between font-light gap-6">
             <div>
-                <span>&copy; 2024 AjuFilms. Todos direitos reservados </span>
+                <span>&copy; 2025 AjuFilms. Todos direitos reservados </span>
                 <span class="block">CNPJ: 43.274.013/0001-61.</span>
             </div>
             <span>Desenvolvido por <a href="https://github.com/edumoreiira" target="_blank"
