--- a/src/app/components/layout/video-card/video-card.component.html
+++ b/src/app/components/layout/video-card/video-card.component.html
@@ -2,11 +2,11 @@
 
     @for (card of videoCards; track card.id) { 
         @if(card.id === selectedVideoCard) {
-            <div class="flex flex-col-reverse sm:flex-row gap-0 lg:gap-12 max-h-full sm:h-[25rem]">
+            <div class="flex flex-col-reverse sm:flex-row gap-0 lg:gap-12 max-h-full">
                 <div class="flex flex-col flex-grow justify-between gap-10 p-10">
                     <div [@fadeSlide]="'up'">
-                        <h2 class="text-2xl font-bold mb-2 md:mb-4">{{card.title}}</h2>
-                        <p class="text-stone-600 text-lg mb-6">{{card.description}}</p>
+                        <h2 class="text-2xl md:text-4xl font-bold mb-2 md:mb-4">{{card.title}}</h2>
+                        <p class="text-stone-600 text-lg md:text-xl mb-6">{{card.description}}</p>
                         <a class="bg-primary text-white py-3 px-6 text-lg font-medium rounded-full
                         hover:brightness-105 active:brightness-110 transition"
                         href="https://wa.me/+5579996121414?text=Ol%C3%A1,%20desejo%20solicitar%20um%20or%C3%A7amento!"
@@ -24,8 +24,8 @@
                     </div>
                 </div>
                 <div class="relative h-full flex-shrink-0 p-3" [@fadeSlide]="'noslide'">
-                    <video #videoRef class="max-h-full aspect-[1.4/1] mx-auto w-[min(600px,100%)] 
-                    sm:aspect-auto h-auto sm:h-full sm:w-60 md:w-80 object-cover rounded-2xl skeleton"
+                    <video #videoRef class="max-h-full aspect-[1/1.4] mx-auto w-[min(600px,100%)] 
+                    h-auto sm:h-full sm:w-80 object-cover rounded-2xl skeleton"
                     (timeupdate)="updateProgress(videoRef)" (click)="togglePause(videoRef)" (ended)="onVideoEnd()"
                     [src]="card.videoUrl" type="video/mp4" (canplaythrough)="onLoadedVideo($event)"
                     [muted]="true" [autoplay]="true" [playsInline]="true">
