--- a/src/app/components/layout/video-card/video-card.component.html
+++ b/src/app/components/layout/video-card/video-card.component.html
@@ -7,20 +7,35 @@
                     <div [@fadeSlide]="'up'">
                         <h2 class="text-2xl md:text-4xl font-bold mb-2 md:mb-4">{{card.title}}</h2>
                         <p class="text-stone-600 text-lg md:text-xl mb-6">{{card.description}}</p>
-                        <a class="bg-primary text-white py-3 px-6 text-lg font-medium rounded-full
+                        <a class="bg-primary text-white py-2.5 px-4 sm:py-3 sm:px-6 text-md sm:text-lg font-medium rounded-full
                         hover:brightness-105 active:brightness-110 transition"
                         href="https://wa.me/+5579996121414?text=Ol%C3%A1,%20desejo%20solicitar%20um%20or%C3%A7amento!"
+                        role="button"
                         target="_blank">Solicitar orçamento</a>
                     </div>
-                    <div class="flex items-center self-center sm:self-start gap-6 py-2 px-4 rounded-2xl w-[min(30rem,100%)]">
-                        @for (card of videoCards; track card.id) {
-                            <button class="flex flex-grow flex-col-reverse gap-1 justify-center cursor-pointer group"
-                            (click)="setVideoCard(card.id)" [attr.aria-label]="'Mudar para vídeo ' + card.title">
-                                <div class="w-full h-[5px] bg-stone-300 rounded-full">
-                                    <div class="h-[5px] rounded-full bg-primary transition-all ease-linear" [style.width.%]="card.progress"></div>
-                                </div>
+                    <div class="flex items-center justify-between gap-7">
+                        <div class="flex items-center self-center sm:self-start gap-6 py-2 rounded-2xl w-[min(30rem,100%)]">
+                            @for (card of videoCards; track card.id) {
+                                <button class="flex flex-grow flex-col-reverse gap-1 justify-center cursor-pointer group"
+                                (click)="setVideoCard(card.id)" [attr.aria-label]="'Mudar para vídeo ' + card.title">
+                                    <div class="w-full h-[5px] bg-stone-300 rounded-full">
+                                        <div class="h-[5px] rounded-full bg-primary transition-all ease-linear" [style.width.%]="card.progress"></div>
+                                    </div>
+                                </button>
+                            }
+                        </div>
+                        <div class="flex items-center gap-4 justify-between">
+                            <button class="p-1.5 rounded-full text-white bg-primary/70
+                            hover:bg-primary/90 active:bg-primary transition-colors"
+                            (click)="previousVideoCard()">
+                                <i class="flex fi fi-sr-angle-small-left"></i>
                             </button>
-                        }
+                            <button class="p-1.5 rounded-full text-white bg-primary/70
+                            hover:bg-primary/90 active:bg-primary transition-colors"
+                            (click)="nextVideoCard()">
+                                <i class="flex fi fi-sr-angle-small-right"></i>
+                            </button>
+                        </div>
                     </div>
                 </div>
                 <div class="relative h-full flex-shrink-0 p-3" [@fadeSlide]="'noslide'">
