--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -59,6 +59,12 @@
     </p>
 </section>
 
+<section id="films-preview" class="overflow-hidden">
+    <div class="c-container py-32">
+        <app-films-preview/>
+    </div>
+</section>
+
 <section id="beneficios" class="bg-stone-100 overflow-hidden">
     <div class="c-container py-32">
         <h1 class="font-normal text-4xl max-w-2xl sm:text-center text-start mx-auto text-stone-600 mb-16" InterObs obsClass="fade-in">
