--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="img-container relative max-h-screen rounded-b-[0em]">
+<div class="h-[calc(100vh-20px)] sm:h-[45rem] relative max-h-screen rounded-b-[0em] max-w-full overflow-hidden">
     <img src="./images/windows3.webp" alt="Janela de prédio com vista para a cidade"
     class="absolute building h-full w-full object-cover brightness-[85%] hue-rotate-[-12deg] grayscale-[40%]
     border-white sm:border-b-0 border-b-1" 
@@ -12,8 +12,8 @@
             href="https://wa.me/+5579996121414?text=Ol%C3%A1,%20desejo%20solicitar%20um%20or%C3%A7amento!" target="_blank">Fazer orçamento</a>
         </header>
         <div class="main-card-info bg-white -bottom-[1px] absolute translate-x-1/2 right-1/2 md:translate-x-0 md:right-0 
-        w-[calc(100%-60px)] sm:w-[calc(100%-80px)] md:max-w-[60%] lg:max-w-[50%] xl:p-8 p-6 pb-0 md:rounded-tr-none rounded-tr-3xl 
-        rounded-tl-3xl flex sm:flex-row flex-col sm:items-start items-center sm:gap-6 gap-2 h-[140px] sm:h-[auto] sm:max-h-none">
+        w-[calc(100%-60px)] sm:w-[calc(100%-80px)] md:max-w-[60%] lg:max-w-[50%] xl:p-8 p-6 pb-0 md:rounded-tr-none sm:rounded-t-3xl 
+        rounded-t-[2rem] flex sm:flex-row flex-col sm:items-start items-center sm:gap-6 gap-2 h-[144px] sm:h-[auto] sm:max-h-none">
             <div class="flex-1 fade-in delay-1 sm:block hidden">
                 <h2 class="font-medium 2xl:text-5xl xl:text-4xl xs:text-3xl text-2xl mb-2">7 anos</h2>
                 <p class="text-stone-600 xl:text-base text-sm">de excelência em aplicação de películas em residências e comércios</p>
@@ -23,7 +23,7 @@
                 <p class="text-stone-600 xl:text-base text-sm">janelas transformadas com películas de alta performance</p>
             </div>
             <div class="flex-1 fade-in delay-3 sm:block hidden">
-                <h2 class="font-medium 2xl:text-5xl xl:text-4xl xs:text-3xl text-2xl mb-2">20+ tipos</h2>
+                <h2 class="font-medium 2xl:text-5xl xl:text-4xl xs:text-3xl text-2xl mb-2">10+ tipos</h2>
                 <p class="text-stone-600 xl:text-base text-sm">de películas para garantir proteção solar, privacidade, segurança e estética.</p>
             </div>
             
@@ -36,10 +36,11 @@
             <!-- items-bar -->
             <div class="flex items-center justify-center sm:hidden">
                 @for (item of headerTexts; track $index) {
-                    <button class="hover:opacity-100 transition-opacity p-2"
-                    [ngClass]="$index === selectedHeaderTextIndex() ? 'opacity-100' : 'opacity-30'"
+                    @let isActive = $index === selectedHeaderTextIndex();
+                    <button class="opacity-30 hover:opacity-50 transition-opacity p-2"
                     (click)="setHeaderText($index)">
-                    <div class="w-2.5 h-2.5 bg-stone-600 rounded-full"></div>
+                    <div class="h-2.5 bg-stone-600 rounded-full transition-all duration-500"
+                    [ngClass]="isActive ? 'w-10' : 'w-2.5'"></div>
                     </button>
                 }
             </div>
