feat(footer): add e-mail address and phone number

--- a/src/app/components/layout/footer/footer.component.html
+++ b/src/app/components/layout/footer/footer.component.html
@@ -4,12 +4,17 @@
         <h2 class="text-4xl max-w-2xl text-center">Transformamos ambientes <span class="text-gray-500">com conforto, eficiência e estética!</span></h2>
     </div>
     <div class="col-span-2 flex flex-col delay-1">
-        <div class="pb-6 border-b border-neutral-900 flex items-center justify-center">
+        <div class="pb-6 flex items-center justify-center">
             <div class="flex items-center">
                 <a href="https://www.instagram.com/ajufilms/" class="rounded-xl rounded-r-none bg-neutral-900 p-4 
                 transition-colors hover:bg-neutral-800 active:bg-neutral-700" target="_blank" title="Instagram"
                 aria-label="Ir para nosso instagram">
                     <i class="fi fi-brands-instagram flex"></i>
+                </a>
+                <a href="mailto:ajufilms.se@gmail.com" title="ajufilms.se@gmail.com"
+                class="bg-neutral-900 p-4 transition-colors hover:bg-neutral-800 
+                active:bg-neutral-700" target="_blank" aria-label="Enviar e-mail">
+                    <i class="fi fi-rr-at flex"></i>
                 </a>
                 <a href="https://wa.me/+5579996121414?text=Ol%C3%A1,%20desejo%20solicitar%20um%20or%C3%A7amento!" 
                 class="rounded-xl rounded-l-none bg-neutral-900 p-4 transition-colors hover:bg-neutral-800 
@@ -17,8 +22,19 @@
                     <i class="fi fi-brands-whatsapp flex"></i>
                 </a>
             </div>
+            
         </div>
-        <div class="py-6 flex xs:flex-row xs:items-start items-center flex-col justify-between font-light gap-6">
+        <div class="flex justify-between items-center">
+            <div class="flex items-center gap-2">
+                <i class="fi fi-rr-at flex"></i>
+                <span class="font-light">ajufilms.se&#64;gmail.com</span>
+            </div>
+            <div class="flex items-center gap-2">
+                <i class="fi fi-rr-phone-flip flex"></i>
+                <span class="font-light">(79) 99612-1414</span>
+            </div>
+        </div>
+        <div class="border-t border-neutral-900 mt-6 py-6 flex xs:flex-row xs:items-start items-center flex-col justify-between font-light gap-6">
             <div>
                 <span>&copy; 2025 AjuFilms. Todos direitos reservados </span>
                 <span class="block">CNPJ: 43.274.013/0001-61.</span>
