--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,19 +1,28 @@
 <div class="h-[calc(100vh-20px)] sm:h-[45rem] relative max-h-screen rounded-b-[0em] max-w-full overflow-hidden">
     <img src="./images/windows3.webp" alt="Janela de prédio com vista para a cidade"
-    class="absolute building h-full w-full object-cover brightness-[85%] hue-rotate-[-12deg] grayscale-[40%]
+    class="absolute building h-full w-full object-cover brightness-[65%] hue-rotate-[-12deg] grayscale-[40%]
     border-white sm:border-b-0 border-b-1" 
     (load)="preloadVideos()">
 
     <main id="home" class="c-container h-full grid grid-cols-1 lg:grid-cols-2 gap-6">
         <header class="relative text-white self-center flex flex-col items-center text-center -mt-28 md:mt-0 md:text-start md:items-start fade-in">
-            <h1 class="text-[2.8rem] xs:text-[4.1rem] min-[375px]:text-[3.6rem] font-medium leading-tight max-w-2xl">A proteção que seu ambiente precisa!</h1>
-            <a class="bg-stone-50 text-stone-950 py-2 px-6 rounded-full text-lg font-semibold mt-4
+            <div class="py-1 px-3 bg-black/80 flex items-center gap-2 text-sm font-semibold rounded-lg">
+                <i class="fi fi-ss-house-building flex"></i>
+                Apenas Residencial e Comercial!
+            </div>
+            <h1 class="text-4xl xs:text-5xl sm:text-[4.1rem] font-semibold leading-tight max-w-2xl mb-4">A proteção que seu ambiente precisa!</h1>
+            <p class="w-[calc(100%-40px)] sm:w-auto text-lg mb-4">Sofrendo com calor excessivo? <span class="font-semibold">Temos a solução ideal para você.</span></p>
+            <p class="w-[calc(100%-40px)] sm:w-auto text-lg mb-4">Blackout • Espelhada • Segurança • Película Fumê de Controle Solar • Térmica</p>
+            <a class="flex items-center gap-2 bg-stone-50 text-stone-950 py-2 px-6 rounded-full text-lg font-semibold mt-4
             hover:opacity-90 active:opacity-85 transition-opacity"
-            href="https://wa.me/+5579996121414?text=Ol%C3%A1,%20desejo%20solicitar%20um%20or%C3%A7amento!" target="_blank">Fazer orçamento</a>
+            href="https://wa.me/+5579996121414?text=Ol%C3%A1,%20desejo%20solicitar%20um%20or%C3%A7amento!" target="_blank">
+                <i class="fi fi-brands-whatsapp flex"></i>
+                Fazer orçamento
+            </a>
         </header>
         <div class="main-card-info bg-white -bottom-[1px] absolute translate-x-1/2 right-1/2 md:translate-x-0 md:right-0 
-        w-[calc(100%-60px)] sm:w-[calc(100%-80px)] md:max-w-[60%] lg:max-w-[50%] xl:p-8 p-6 pb-0 md:rounded-tr-none sm:rounded-t-3xl 
-        rounded-t-[2rem] flex sm:flex-row flex-col sm:items-start items-center sm:gap-6 gap-2 h-[144px] sm:h-[auto] sm:max-h-none">
+        w-[calc(100%-60px)] sm:w-[calc(100%-80px)] md:max-w-[60%] lg:max-w-[50%] xl:p-8 p-6 py-4 sm:py-6 pb-0 md:rounded-tr-none sm:rounded-t-3xl 
+        rounded-t-[2rem] flex sm:flex-row flex-col sm:items-start items-center sm:gap-6 gap-2 h-[130px] xs:h-[144px] sm:h-[auto] sm:max-h-none">
             <div class="flex-1 fade-in delay-1 sm:block hidden">
                 <h2 class="font-medium 2xl:text-5xl xl:text-4xl xs:text-3xl text-2xl mb-2">7 anos</h2>
                 <p class="text-stone-600 xl:text-base text-sm">de excelência em aplicação de películas em residências e comércios</p>
